--- a/Chapter_1.ipynb
+++ b/Chapter_1.ipynb
@@ -173,37 +173,34 @@
    "metadata": {},
    "source": [
     "1.\t**Consider the Source**\n",
-    "    + Who paid for the study?\n",
-    "        + It’s essential to know who funded the study, as the funding source could introduce bias. For example, if a pharmaceutical company funds a study on a new drug, there's a potential for conflict of interest.\n",
-    "    + Where was the data collected?\n",
-    "        + The location of data collection matters, as geographical or cultural factors might influence the study's outcomes. Results may not be generalizable if the data were collected in a specific area that doesn't represent the larger population.\n",
-    "      \n",
-    "    + When was the information collected?\n",
-    "        +\tTiming can impact study results. Data collected during a pandemic, for instance, might differ significantly from data collected under normal circumstances.\n",
-    "\n",
-    "    + Who published the study?\n",
-    "        + The reputation and rigor of the journal or organization that published the study are important. Was it peer-reviewed? Is the publisher reputable? Publishing in a respected journal usually indicates a higher level of scrutiny.\n",
-    "          \n",
+    "    1. Who paid for the study?\n",
+    "        1. It’s essential to know who funded the study, as the funding source could introduce bias. For example, if a pharmaceutical company funds a study on a new drug, there's a potential for conflict of interest.\n",
+    "    2. Where was the data collected?\n",
+    "        2. The location of data collection matters, as geographical or cultural factors might influence the study's outcomes. Results may not be generalizable if the data were collected in a specific area that doesn't represent the larger population.\n",
+    "    3. When was the information collected?\n",
+    "        3. Timing can impact study results. Data collected during a pandemic, for instance, might differ significantly from data collected under normal circumstances.\n",
+    "    4. Who published the study?\n",
+    "        4. The reputation and rigor of the journal or organization that published the study are important. Was it peer-reviewed? Is the publisher reputable? Publishing in a respected journal usually indicates a higher level of scrutiny. \n",
     "2.\t**Consider the Variable**\n",
-    "    + Are the explanatory and response variables clearly defined?\n",
-    "    + Are confounding variables identified and controlled?\n",
-    "    + Are the variables relevant and appropriate for the study?\n",
+    "    1. Are the explanatory and response variables clearly defined?\n",
+    "    2. Are confounding variables identified and controlled?\n",
+    "    3. Are the variables relevant and appropriate for the study?\n",
     "3.\t**Consider the Setup** \n",
-    "    + **Bias:** Are there signs of favoring certain outcomes? Was the study designed or interpreted in a way that favors the sponsor or researchers’ goals?\n",
-    "    + **Sampling Bias:** Was the sample representative of the population? If certain groups were over- or underrepresented, the results might not be generalizable. \n",
-    "    + **Dropouts:** Are participants who begin a study but fail to complete it.\n",
-    "    + **Processing errors:** Are errors that occur from the data being processed, such as typos.\n",
-    "    + **Nonadherent:** Participant  who remains in the study but strays from the directions. \n",
-    "    + **Researcher Bias:** Did the researchers' expectations or actions influence the results?\n",
-    "    + **Response Bias:** Occurs when a researchers behavior causes a participant to alter their response or when a participant gives an inaccurate response.\n",
-    "    + **Participation Bias:** Occurs when there is a problem with the participation or lack thereof -of those chosen for the study.\n",
-    "    + **Nonresponse Bias:** Occurs when there is a lack of participation in a self-selected sample from certain segments of a population, when a person refuses to participate in a survey, or when a respondent omits questions when answering a survey. \n",
+    "    1. **Bias:** Are there signs of favoring certain outcomes? Was the study designed or interpreted in a way that favors the sponsor or researchers’ goals?\n",
+    "    2. **Sampling Bias:** Was the sample representative of the population? If certain groups were over- or underrepresented, the results might not be generalizable. \n",
+    "    3. **Dropouts:** Are participants who begin a study but fail to complete it.\n",
+    "    4. **Processing errors:** Are errors that occur from the data being processed, such as typos.\n",
+    "    5. **Nonadherent:** Participant  who remains in the study but strays from the directions. \n",
+    "    6. **Researcher Bias:** Did the researchers' expectations or actions influence the results?\n",
+    "    7. **Response Bias:** Occurs when a researchers behavior causes a participant to alter their response or when a participant gives an inaccurate response.\n",
+    "    8. **Participation Bias:** Occurs when there is a problem with the participation or lack thereof -of those chosen for the study.\n",
+    "    9. **Nonresponse Bias:** Occurs when there is a lack of participation in a self-selected sample from certain segments of a population, when a person refuses to participate in a survey, or when a respondent omits questions when answering a survey. \n",
     "4.\t**Consider the Conclusion**\n",
-    "    + Do the data support the conclusion?\n",
-    "    + Do the results present the whole picture or just a part?\n",
-    "    + Could there be another conclusion drawn?\n",
-    "    + Could there be other reasons for the same conclusion drawn?\n",
-    "    + Does the study have any practical applications? \n",
+    "    1. Do the data support the conclusion?\n",
+    "    2. Do the results present the whole picture or just a part?\n",
+    "    3. Could there be another conclusion drawn?\n",
+    "    4. Could there be other reasons for the same conclusion drawn?\n",
+    "    5. Does the study have any practical applications? \n",
     "---"
    ]
   },
