--- a/Chapter_2.ipynb
+++ b/Chapter_2.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "### Characteristics: Class Boundary\n",
-    "A Class Boundary is the value that lies haftway between the upper limit of one class and the lower limit of the next class. \n",
+    "A class **Boundary** is the value that lies haftway between the upper limit of one class and the lower limit of the next class. \n",
     "1. Subtract the second class lower limit from the first class upper limit.\n",
     "2. Divide the difference by 2\n",
     "3. Adjust Lower and Upper Class Limits: (Subtract from all lower class limits, Add to all upper class limits)"
@@ -233,7 +233,7 @@
    "metadata": {},
    "source": [
     "### Characteristics: Relative Frequency\n",
-    "The **relative freuency** is the faction or percentage of the data set that falls into a particular class, given by \n",
+    "The **Relative Frequency** is the faction or percentage of the data set that falls into a particular class, given by \n",
     "+ Relative Frequency = Class Frequency / Sample Size"
    ]
   },
@@ -337,7 +337,7 @@
    "metadata": {},
    "source": [
     "### Pie Chart:\n",
-    "A **Pie Chart:** display the relative frequencies from the frequency distribution are used to determine the size of each wedge in the pie chart. Each wedge’s central angle is calculated by multiplying the relative frequency of each class by 360 degrees and then rounding to the nearest whole degree.\n",
+    "A **Pie Chart** display the relative frequencies from the frequency distribution are used to determine the size of each wedge in the pie chart. Each wedge’s central angle is calculated by multiplying the relative frequency of each class by 360 degrees and then rounding to the nearest whole degree.\n",
     "+ Central Angle measure = Relative frequencies * 360"
    ]
   },
@@ -736,7 +736,7 @@
    "metadata": {},
    "source": [
     "### Ogive\n",
-    "An **Ogive (pronounced \"oh-jive\"** i is a graphical representation of the cumulative frequency distribution of a dataset. It is a line graph that displays the cumulative frequency on the vertical axis and the upper boundaries of class intervals (or class boundaries) on the horizontal axis. The ogive is used to show how the cumulative frequency of a dataset increases as you progress through the class intervals. It helps in visualizing the distribution of data, identifying patterns, and determining the number of data points below a certain value."
+    "An **Ogive (pronounced \"oh-jive\"**) is a graphical representation of the cumulative frequency distribution of a dataset. It is a line graph that displays the cumulative frequency on the vertical axis and the upper boundaries of class intervals (or class boundaries) on the horizontal axis. The ogive is used to show how the cumulative frequency of a dataset increases as you progress through the class intervals. It helps in visualizing the distribution of data, identifying patterns, and determining the number of data points below a certain value."
    ]
   },
   {
@@ -794,7 +794,7 @@
    "metadata": {},
    "source": [
     "### Stem Plot (Stem-and-Leaf Plot)\n",
-    "A **Stem Plot**, also known as a Stem-and-Leaf Plot, is a type of graphical representation that displays data while retaining the original values. It is similar to a histogram but provides more detail about individual data points."
+    "A **Stem Plot**, also known as a **Stem-and-Leaf Plot**, is a type of graphical representation that displays data while retaining the original values. It is similar to a histogram but provides more detail about individual data points."
    ]
   },
   {
