--- a/Chapter_1.ipynb
+++ b/Chapter_1.ipynb
@@ -70,10 +70,10 @@
    "source": [
     "+ **Quantitative Variable:** These variables represent measurable quantities and are expressed numerically. Typically records the amount of degree of something.\n",
     "    + **Continuous:** Float data that can take on any value in an interval and are usually measurements.\n",
-    "        + **Interval:** Ratio: data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
+    "        + **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
     "        + **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something\n",
     "    + **Discrete:** Integers data that can take on only particular values and are Interger.\n",
-    "        + **Interval:** Ratio: data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
+    "        + **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
     "        + **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something"
    ]
   },
