--- a/Chapter_1.ipynb
+++ b/Chapter_1.ipynb
@@ -57,10 +57,11 @@
    "id": "cef7722c-3d75-45f4-8176-c1821aa4f59e",
    "metadata": {},
    "source": [
-    "+ **Qualitative Variable:** These variables represent categories. Numbers can be used here but we wouldn’t find value in analyzing the numbers.\n",
-    "    + **Neither Continuous nor Discrete**  \n",
-    "        + **Nominal:** data consisting of labels or names.\n",
-    "        + **Ordinal:** data can be arranged in a meaningful order, but calculations don’t make sense.\n"
+    "### Qualitative Variable:\n",
+    "These variables represent categories. Numbers can be used here but we wouldn’t find value in analyzing the numbers.\n",
+    "+ Neither Continuous nor Discrete  \n",
+    "  + **Nominal:** data consisting of labels or names.\n",
+    "  + **Ordinal:** data can be arranged in a meaningful order, but calculations don’t make sense.\n"
    ]
   },
   {
@@ -68,13 +69,16 @@
    "id": "b6f4b80a-7ab2-4ac1-bb59-c5e43e1bb752",
    "metadata": {},
    "source": [
-    "+ **Quantitative Variable:** These variables represent measurable quantities and are expressed numerically. Typically records the amount of degree of something.\n",
-    "    + **Continuous:** Float data that can take on any value in an interval and are usually measurements.\n",
-    "        + **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
-    "        + **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something\n",
-    "    + **Discrete:** Integers data that can take on only particular values and are Interger.\n",
-    "        + **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
-    "        + **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something"
+    "### Quantitative Variable: \n",
+    "These variables represent measurable quantities and are expressed numerically. Typically records the amount of degree of something.\n",
+    "#### Continuous: \n",
+    "Data that can take on any value in an interval and are usually measurements.\n",
+    "+ **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
+    "+ **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something\n",
+    "#### Discrete: \n",
+    "Data that can take on only particular values and are Interger.\n",
+    "+ **Interval:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero has no meaning.\n",
+    "+ **Ratio:** data can be arranged in a meaning order and differences between data entries are meaningful. Zero indicates the absence of something"
    ]
   },
   {
@@ -101,6 +105,7 @@
    "metadata": {},
    "source": [
     "1. Determine the design of the study:\n",
+    "    \n",
     "    1. What question are we trying to answer? (Why?)\n",
     "    2. What is the population? (Who?)\n",
     "    3. What variables will we record? (What?)\n",
@@ -108,9 +113,16 @@
     "        1. Observation Study\n",
     "            + **Retroactive:** deals with actions or effects that influence the past\n",
     "            + **Proactive:** involves taking measures to prepare for or prevent \n",
-    "        3. Experiments\n",
-    "3. Collect the data\n",
-    "4. Organize the data Analyze the data to answer the question"
+    "        2. Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "730740e2-a1fb-41bf-b370-0bae251148f3",
+   "metadata": {},
+   "source": [
+    "2. Collect the data\n",
+    "3. Organize the data Analyze the data to answer the question"
    ]
   },
   {
@@ -128,14 +140,9 @@
    "id": "4705f2ad-ffb7-4978-8038-4bdb564da611",
    "metadata": {},
    "source": [
-    "**Observation Study:** collect data about our population. However, it is too costly or difficult to perform a census, so we instead find a sample that has the same **RELEVANT** characteristic as the population. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4eb56552-0346-4545-aba0-722c14b06dc9",
-   "metadata": {},
-   "source": [
+    "### Observation Study:\n",
+    "Collect data about our population. However, it is too costly or difficult to perform a census, so we instead find a sample that has the same **RELEVANT** characteristic as the population.\n",
+    "\n",
     "**Representative Sample** has the same revenant characteristic as the population and does not favor one group from the population over another."
    ]
   },
@@ -144,7 +151,7 @@
    "id": "46fc1710-cb73-4b1c-bcda-77138f924e69",
    "metadata": {},
    "source": [
-    "**Techniques use to collect Sample Data:**\n",
+    "#### Techniques use to collect Sample Data:\n",
     "+  **Random Sample:** broad term that covers any sampling method where the selection is random but may not be equal for all.\n",
     "+  **Simple Random Sample (SRS):** ensures equal probability for every individual being selected.\n",
     "+  **Stratified Sample:** the population is divided into groups or strata based on certain characteristics and then a random sample is taken from each group.\n",
@@ -158,7 +165,7 @@
    "id": "194b7976-1446-422a-bc03-545e9553cf4b",
    "metadata": {},
    "source": [
-    "**Types of Observational Studies:**\n",
+    "#### Types of Observational Studies:\n",
     "+  **Cross-Sectional Study:** Data are collected at a single point in time, providing a snapshot of a population or phenomenon at that moment.\n",
     "+  **Longitudinal Study:** Data are gathered by following the same group or subjects over a period, allowing for the study of changes and developments.\n",
     "+  **Meta-Analysis:** A study that compiles and statistically analyzes data from multiple previous studies to derive a more comprehensive conclusion.\n",
@@ -180,11 +187,8 @@
    "id": "c654dbc0-9e67-40eb-b695-b069d1d17765",
    "metadata": {},
    "source": [
-    "**Experiments** are the only way to show a cause-and-effect relationship.\n",
-    "### Experiments: How to design an experiment\n",
-    "1. Randomize the control and treatment groups\n",
-    "2. Control for outside effects on the response variable\n",
-    "3. Replicate the experiment a significant number of times to see meaningful patterns."
+    "### Experiments: \n",
+    "Are the only way to show a cause-and-effect relationship."
    ]
   },
   {
@@ -218,7 +222,7 @@
    "id": "970af29a-9b18-4ae9-9783-478a6b5e6b25",
    "metadata": {},
    "source": [
-    "**Experiments: How to design an experiment**\n",
+    "#### Experiments: How to design an experiment\n",
     "1. Randomize the control and treatment groups\n",
     "2. Control for outside effects on the response variable\n",
     "3. Replicate the experiment a significant number of times to see meaningful patterns."
@@ -239,7 +243,7 @@
    "id": "d73b1b84-f80a-40aa-ace7-7d28a3b99849",
    "metadata": {},
    "source": [
-    "1.\t**Consider the Source**"
+    "### 1: Consider the Source"
    ]
   },
   {
@@ -263,7 +267,7 @@
    "id": "85cc5ea0-f9a3-437f-9a8b-d69e91f02872",
    "metadata": {},
    "source": [
-    "2.\t**Consider the Variable**"
+    "### 2. Consider the Variable"
    ]
   },
   {
@@ -281,7 +285,7 @@
    "id": "a77de624-4d4f-441f-a0fc-3bf13cd9a049",
    "metadata": {},
    "source": [
-    "3.\t**Consider the Setup**"
+    "### 3. Consider the Setup"
    ]
   },
   {
@@ -306,7 +310,7 @@
    "id": "522f273f-024d-460f-960e-88e8b2ec368f",
    "metadata": {},
    "source": [
-    "5.\t**Consider the Conclusion**"
+    "### 4. Consider the Conclusion"
    ]
   },
   {
